<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="90dp"
        android:layout_height="122dp"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/movieTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yearTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Year: "
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Rating: "
                android:textSize="14sp" />

            <TextView
                android:id="@+id/runtimeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/runtime"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/genre"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/imdbRatingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imdb_rating"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/imdbLinkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here_to_open_imdb_link"
            android:textColor="#6AA5FF"
            android:textSize="14sp" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="14sp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</LinearLayout>
